--- a/style.css
+++ b/style.css
@@ -353,3 +353,31 @@ body{
     text-align: center;
     margin-left: -2.7%;
 }
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 100px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    /* display: block; */
+}
+
+#homee{
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+#Homee:hover .dropdown-content {
+    display: block;
+}
+
